fix: improve waves on mobile, and switch to sticky header

--- a/packages/react-saasify/src/themes/waves.module.css
+++ b/packages/react-saasify/src/themes/waves.module.css
@@ -91,14 +91,14 @@ strong {
 
 .home-page .hero-section {
   height: 60vh;
-  margin-top: 0;
-  padding-top: 150px;
+  margin-top: var(--space-xxl);
 }
 
 @media (min-width: 48em) {
   .home-page .hero-section,
   .home-page .demo-section {
     height: 90vh;
+    margin-top: 0;
     min-height: 500px;
     width: 50%;
     z-index: 1;
@@ -209,7 +209,7 @@ strong {
 }
 
 .features-section .features {
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)) !important;
+  grid-template-columns: repeat(auto-fill, minmax(256px, 1fr)) !important;
 }
 
 .features-section .feature {
@@ -244,7 +244,6 @@ strong {
 .pricing-page .pricing-section {
   height: 85vh;
   min-height: 500px;
-  padding-top: 96px;
   z-index: 1;
 }
 
@@ -255,11 +254,18 @@ strong {
 header.container {
   border-bottom: 1px solid #e1e1e1;
   padding: 0;
-  padding-bottom: var(--space-l) !important;
-  padding-left: var(--side-gutter) !important;
-  padding-right: var(--side-gutter) !important;
-  padding-top: var(--space-l) !important;
-  transition: var(--transition-all-fast) !important;
+  padding-bottom: var(--space-m);
+  padding-left: var(--side-gutter);
+  padding-right: var(--side-gutter);
+  padding-top: var(--space-m);
+  position: initial;
+  transition: var(--transition-all-fast);
+}
+
+@media (min-width: 48em) {
+  header.container {
+    position: sticky;
+  }
 }
 
 header.container .links {
@@ -277,9 +283,11 @@ header.container .link:hover {
   filter: var(--filter-tint);
 }
 
-header.container .links .link {
-  margin-left: var(--space-xl);
-  margin-right: var(--space-xl);
+@media (min-width: 48em) {
+  header.container .links .link {
+    margin-left: var(--space-xl);
+    margin-right: var(--space-xl);
+  }
 }
 
 header.container .links .link:first-of-type {
@@ -303,12 +311,50 @@ header.container .links .link:nth-of-type(4) {
   opacity: 0.9;
 }
 
-header.container .actions .link:first-of-type {
-  margin-left: var(--space-xl);
+header.container .actions {
+  margin-top: var(--space-m);
+  justify-content: initial;
 }
 
-header.container .actions .link {
-  margin-left: var(--space-m);
+@media (min-width: 48em) {
+  header.container .actions {
+    justify-content: space-around;
+    margin-top: 0;
+  }
+}
+
+header.container .actions .link:first-of-type {
+  margin-left: 0;
+  margin-right: var(--space-s);
+}
+
+@media (min-width: 48em) {
+  header.container .actions .link:first-of-type {
+    margin-left: var(--space-xl);
+    margin-right: 0;
+  }
+}
+
+header.container .actions .link:last-of-type {
+  margin-left: var(--space-s);
+}
+
+@media (min-width: 48em) {
+  header.container .actions .link:last-of-type {
+    margin-left: var(--space-m);
+  }
+}
+
+header.container .actions .link,
+header.container .actions .link > button {
+  width: 100%;
+}
+
+@media (min-width: 48em) {
+  header.container .actions .link {
+    margin-left: var(--space-m);
+    width: auto;
+  }
 }
 
 header .content {
@@ -316,9 +362,19 @@ header .content {
 }
 
 header.attached {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
-  padding-bottom: var(--space-s) !important;
-  padding-top: var(--space-s) !important;
+  background: transparent;
+  box-shadow: none;
+}
+
+@media (min-width: 48em) {
+  header.attached {
+    background: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
+  }
+}
+
+header .logo {
+  max-height: 48px;
 }
 
 /*
@@ -469,20 +525,32 @@ footer .link:hover {
   height: calc(100% + 100px);
   min-height: 500px;
   left: 0;
-  top: 0;
+  top: -50px;
   width: 100vw;
+}
+
+@media (min-width: 48em) {
+  .section:first-of-type::before {
+    top: -150px;
+  }
 }
 
 .section:first-of-type::after {
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='1440px' height='274px' viewBox='0 0 1440 274' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 54.1 (76490) - https://sketchapp.com --%3E%3Ctitle%3EArtboard%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cdefs%3E%3Cpath d='M1440,94.937049 L1440,274 L0,274 L0,68 C163.333342,95.1394992 375.993354,127.635219 637.980036,165.48716 C899.966717,203.339101 1167.30671,179.822397 1440,94.937049 Z' id='path-1'%3E%3C/path%3E%3Cfilter x='-5.7%25' y='-51.7%25' width='111.5%25' height='180.1%25' filterUnits='objectBoundingBox' id='filter-2'%3E%3CfeOffset dx='0' dy='-24' in='SourceAlpha' result='shadowOffsetOuter1'%3E%3C/feOffset%3E%3CfeGaussianBlur stdDeviation='23.5' in='shadowOffsetOuter1' result='shadowBlurOuter1'%3E%3C/feGaussianBlur%3E%3CfeColorMatrix values='0 0 0 0 0.889011549 0 0 0 0 0.889011549 0 0 0 0 0.889011549 0 0 0 0.5 0' type='matrix' in='shadowBlurOuter1'%3E%3C/feColorMatrix%3E%3C/filter%3E%3C/defs%3E%3Cg id='Artboard' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Combined-Shape'%3E%3Cuse fill='black' fill-opacity='1' filter='url(%23filter-2)' xlink:href='%23path-1'%3E%3C/use%3E%3Cuse fill='%23FFFFFF' fill-rule='evenodd' xlink:href='%23path-1'%3E%3C/use%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-position: center;
   background-size: cover;
-  bottom: -120px;
+  bottom: -125px;
   content: '';
   height: 260px !important;
   left: 0;
   position: absolute;
   width: 100vw;
+}
+
+@media (min-width: 48em) {
+  .section:first-of-type::after {
+    bottom: -32px;
+  }
 }
 
 /*
@@ -495,11 +563,23 @@ footer .link:hover {
 }
 
 .pricing-section::before {
-  height: calc(50% + 250px) !important;
+  height: calc(50% + 0px) !important;
+}
+
+@media (min-width: 48em) {
+  .pricing-section::before {
+    height: calc(50% + 250px) !important;
+  }
 }
 
 .pricing-section::after {
-  top: calc(50% + 60px);
+  top: calc(50% - 225px);
+}
+
+@media (min-width: 48em) {
+  .pricing-section::after {
+    top: calc(50% - 75px);
+  }
 }
 
 .pricing-section .title {
@@ -524,11 +604,18 @@ footer .link:hover {
 .pricing-section .plan {
   border-radius: 10px;
   box-shadow: 0 7px 18px 0 rgba(210, 210, 210, 0.5);
-  margin: var(--space-l);
-  margin-top: 0;
+  margin: 0;
+  margin-bottom: var(--space-xxl);
   max-width: 450px;
   padding: var(--space-xl);
   width: 100%;
+}
+
+@media (min-width: 48em) {
+  .pricing-section .plan {
+    margin: var(--space-l);
+    margin-top: 0;
+  }
 }
 
 .pricing-section .plan h3 {
